--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,17 @@ dependencies:
 dev_dependencies:
   floor_generator: ^1.3.0
   build_runner: ^2.1.2
+  flutter_launcher_icons: "^0.10.0"
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  image_path: "icon.png"
+  android: true
+  adpative_icon_foreground: "icon.png"
+  adaptive_icon_background: "#1f1f1f"
+  ios: true
+  remove_alpha_ios: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
