--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dynamic_color: ^1.5.4
   shared_preferences: ^2.0.15
+  package_info_plus: ^3.0.2
   flutter:
     sdk: flutter
 
@@ -68,9 +69,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  #   - assets/cpnta.svg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
