--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   dynamic_color: ^1.5.4
   shared_preferences: ^2.0.15
   package_info_plus: ^3.0.2
+  receive_sharing_intent: ^1.4.5
   flutter:
     sdk: flutter
 
